--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,5 +70,14 @@ services:
       config-service:
         condition: service_healthy
 
+  front-end-angular:
+    build: angular-front-end
+    container_name: front-end-angular
+    ports:
+      - "80:80"
+    expose:
+      - "80"
+
+
 
 
